Mobile fix portrait flicker on scroll

--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -67,7 +67,7 @@ body {
   -webkit-overflow-scrolling: touch; }
   @media all and (max-width: 1100px) {
     body.showContent {
-      overflow: auto; }
+      overflow-y: auto; }
       body.showContent .down {
         opacity: 1; } }
   body::after {
@@ -114,9 +114,7 @@ body {
   flex-direction: column;
   -webkit-box-align: center;
   -ms-flex-align: center;
-  align-items: center;
-  -webkit-perspective: 900px;
-  perspective: 900px; }
+  align-items: center; }
   .initScreen .slogans {
     display: -webkit-box;
     display: -ms-flexbox;
