--- a/src/components/initScreen/initScreen.scss
+++ b/src/components/initScreen/initScreen.scss
@@ -6,7 +6,6 @@
     position: relative;
     flex-direction: column;
     align-items: center;
-    perspective: 900px;
 
     .slogans {
         display: flex;
